--- a/guides/assets/stylesrc/_main.scss
+++ b/guides/assets/stylesrc/_main.scss
@@ -1,4 +1,19 @@
 body.guide {
+  &::-webkit-scrollbar {
+    width: 12px;
+    background-color: transparent;
+  }
+  
+  &::-webkit-scrollbar-track {
+      -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+      border-radius: 10px;
+      background-color: transparent;
+    }
+  
+  &::-webkit-scrollbar-thumb {
+      border-radius: 10px;
+      -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+  }
 
   -webkit-tap-highlight-color:rgba(38, 27, 35, 0);
 
@@ -18,9 +33,6 @@ body.guide {
   font-size: 1.125rem; /* 18px */
   font-style: normal;
   font-weight: 400;
-  font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-font-smoothing: antialiased;
   line-height: 1.4;
 
   font-feature-settings: "liga" 1;
@@ -54,6 +66,17 @@ body.guide {
     text-align: left;
 
   } // p
+
+  table,
+  ul,
+  .interstitial {
+    @include media('>tablet') {
+      min-width: 23em;
+      max-width: 38em;
+      text-align: left;
+      margin-left: 0 !important;
+    }
+  }
 
   // Links
 
@@ -118,7 +141,6 @@ body.guide {
 
   // Headlines
   // TODO: media queries to increase font size, current sizes are for desktop, so drop base to mobile appropriate and MQ up twice (min width 60/120 em, minheight 30/60em)
-  // Font family is Calibre, declared globally
   h1 {
     color: $rf-brand;
     font-family: 'Calibre', sans-serif;
@@ -248,6 +270,8 @@ body.guide {
       padding: 0.25em 0 1em;
       border-bottom: 1px solid $gray-500;
       margin: 0 0 1em 0;
+
+      &:last-child {border-bottom: none;}
     } // dd
   } // dl
   
@@ -319,9 +343,10 @@ body.guide {
     :where(body[dir="rtl"]) & { text-align: right; }
 
     @include media('>desktop') {
-      padding-left: 5vw;
       width: 60vw;
-
+      max-width: calc(55rem + 400px);
+      margin: 0 auto;
+      padding-right: 400px;
     }
   } // .wrapper
 
@@ -392,6 +417,12 @@ body.guide {
   } // nav#topNav
 
   header#page_header {
+    width: 100%;
+
+    .wrapper {
+      max-width: calc(50em + 400px);
+      padding-right: 0;
+    }
 
     nav#feature_nav {
       @include media('>desktop'){
@@ -399,7 +430,7 @@ body.guide {
         display: flex;
         flex-direction: row;
         justify-content: space-between;
-        width: 90vw;
+        width: 100%;
       }
       
       // Image augmented
@@ -452,7 +483,7 @@ body.guide {
         @include media('>desktop'){
           display: flex;
           flex-direction: row;
-          justify-content: space-between;
+          justify-content: flex-end;
           margin: 0;
           padding: 1em 0 0 0;
         }
@@ -639,11 +670,21 @@ body.guide {
     background-color: $gray-800;
     color: #fff;
     font-size: 0.75em;
-    padding: 1em 0 .5em 0;
+    padding: 1.5em 0 .5em 0;
     width: 100%;
+
+    .wrapper {
+      padding: 0;
+    }
 
     p {
       max-width: 100vw;
+    }
+  }
+
+  main#container {
+    @include media('>desktop') {
+      // padding-right: 400px;
     }
   }
 
@@ -652,6 +693,7 @@ body.guide {
 
     @include media('>desktop') {
       background-color: #fff;
+      // padding-right: 400px;
     }
 
     #subCol {
@@ -664,18 +706,45 @@ body.guide {
         display: block;
         position: fixed;
           top: 100px;
-          right: 5vw;
+          right: calc(40vw - 400px);
         max-height: calc(100vh - 90px);
         width: 30vw;
+        max-width: 380px;
       }
 
       h3.chapter img {
         margin-right: 0.25em;
       }
 
-      ol {
+      ol.chapters {
+        &::-webkit-scrollbar
+        {
+          width: 6px;
+          background-color: #F5F5F5;
+        }
+
+        &::-webkit-scrollbar-track
+        {
+          background-color: #F5F5F5;
+          border-radius: 6px;
+          box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+        }  
+
+        &::-webkit-scrollbar-thumb
+        {
+          border-radius: 5px;
+          background-image: -webkit-gradient(linear,
+                            left bottom,
+                            left top,
+                            color-stop(0.44, $rf-brand-light),
+                            color-stop(0.72, $rf-brand),
+                            color-stop(0.86, $rf-brand-dark));
+        }
+
+
         @include media('>desktop') {
           overflow-y: auto;
+          overflow-x: hidden;
           max-height: 73vh;
         }
 
@@ -696,19 +765,21 @@ body.guide {
           } // a
 
           ul {
+            margin-top: 0.5em;
+            margin-bottom: 0.75em;
             padding-inline-start: 1em;
+            max-width: unset;
             
             li {
               font-weight: 400;
+              @include media('>desktop') {
+                width: 320px;
+              }
             } // li
           } // ul
         } // li
       } // ol
     }
-  }
-
-  @include media('>desktop') {
-    padding-right: 400px;
   }
   
 } // body.guide
